[package]
name = "russ"
version = "0.4.0"
authors = ["Clark Kampfe <clark.kampfe@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
atom_syndication = { version = "0.12", default-features = false }
chrono = { version = "0.4", default-features = false, features = [
    "clock",
    "std",
] }
clap = { version = "4", features = ["derive"] }
copypasta = "0.10"
crossterm = "0.27"
diligent-date-parser = "0.1"
directories = "5"
html2text = "0.11"
num_cpus = "1.16"
r2d2 = "0.8"
r2d2_sqlite = "0.23"
rss = { version = "2.0", default-features = false }
rusqlite = { version = "0.30", features = ["bundled", "chrono"] }
ratatui = "0.25"
ureq = "2.9"
webbrowser = "0.8"
wsl = "0.1"

[profile.release]
codegen-units = 1
lto = true
